Simplified the handler architecture. Introduced variable capabilities. Not all things are bridge anymore. I think I've completely cleaned up the base of the binding. Some testings needed now.
Signed-off-by: clinique <gael@lhopital.org>